[tool.poetry]
name = "my_tool"
version = "0.1.0"
description = ""
authors = ["Author <Your Email>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"


[tool.poetry.scripts]
hello_world = 'my_tool:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
